<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/lb_cover" />

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/lb_barcode" />

    <ImageView
        android:id="@+id/img_barcode"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="7dp"
        android:hint="@string/lb_title"
        android:maxLines="1" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/lb_desc"
        android:maxLines="1" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="매장"
        android:maxLines="1"
        android:visibility="gone" />
    <!--<android.support.v7.widget.AppCompatSpinner-->
    <!--android:id="@+id/spin_category"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:layout_height="wrap_content">-->

    <!--</android.support.v7.widget.AppCompatSpinner>-->
    <RadioGroup
        android:id="@+id/radio_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:dividerPadding="10dp"
        android:gravity="center"
        android:orientation="horizontal">


    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_expiredt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_expiredt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_expire" />

        <TextView
            android:id="@+id/tv_expiredt_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/no_expiredt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_expiredt_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:padding="0dp">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btn_save"
            android:textColor="@android:color/white" />

<!--        <Button-->
<!--            android:id="@+id/btn_delete"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="0"-->
<!--            android:text="@string/btn_del"-->
<!--            android:textColor="@android:color/white" />-->

    </LinearLayout>


</LinearLayout>